Adding TSreams and Spring boot based implementation for the service